--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "@types/express": "^4.17.21",
