--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "waystodo-be",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "@types/express": "^4.17.21",
@@ -20,5 +19,6 @@
     "prisma": "^5.14.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
-  }
+  },
+  "devDependencies": {}
 }
