--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "waystodo-be",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "ts-node-dev src/index.ts"
