--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node-dev src/index.ts",
-    "deploy": "prisma migrate deploy"
+    "dev": "ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "",
